k8s/dep-frontend-v2-autoscale.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-scala-autoscale
  labels:
    name: frontend-scala-autoscale
    obj: deployment
spec:
  selector:
    matchLabels:
      name: frontend-scala-autoscale
  template:
    metadata:
      labels:
        name: frontend-scala-autoscale
    spec:
      containers:
        - name: frontend-scala-autoscale
          image: dbortnichuk/test_frontend_scala:8
          ports:
            - containerPort: 8080
              protocol: TCP
