k8s/pod-frontend.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    name: frontend-scala
  name: frontend-scala
  namespace: default
spec:
  containers:
    - env:
        - name: APP_START_DELAY
          value: "80"
      image: dbortnichuk/test_frontend_scala:3
      name: frontend-scala
      ports:
        - containerPort: 8080
          protocol: TCP
      readinessProbe:
        httpGet:
          path: /health
          port: 8080
        initialDelaySeconds: 3
        periodSeconds: 3
