k8s/service-frontend-v2-autoscale.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-scala
spec:
  type: LoadBalancer
  ports:
    - targetPort: 8080
      port: 8080
  selector:
    name: frontend-scala-autoscale
