k8s/ingress-path.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-hosts-path

spec:
  rules:
    - host: www.bortnichuk.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: main
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: main
                port:
                  number: 80
